# nkust-2024-ai-voice-assistant

./: README.md  pyproject.toml
src/ai_voice_assistant/: __init__.py  __main__.py
