[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "The AI voice assistant that listens to your command and responds to you with voice."
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" },
    { name = "RedYie" },
]
dependencies = [
    "openai>=1.30.1",
    "pyaudio>=0.2.14",
    "wave>=0.0.2",
    "pydub>=0.25.1",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "LICENSE" }

[project.scripts]
"ai-voice-assistant" = "ai_voice_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_voice_assistant"]
